fixed textarea overflow

--- a/imports/ui/structure/app/App.less
+++ b/imports/ui/structure/app/App.less
@@ -139,10 +139,14 @@
   margin-top: 20px;
   // padding: 10px 0;
   overflow: hidden;
+
+  &.track-auto{
+    height: auto;
+  }
 }
 
 .show-track{
-  height: 72px;
+  height: 82px;
 }
 
 
